# colpetto

./: Cargo.toml  README.md  build.rs  flake.nix
.github/workflows/: ci.yml
examples/: print_keys.rs  simple.rs  task.rs
src/: device.rs  device_group.rs  event.rs  event_stream.rs  helper.rs  lib.rs  logger.c  logger.rs  seat.rs  sys.rs
src/event/: device.rs  gesture.rs  keyboard.rs  mod.rs  pointer.rs  switch.rs  table_pad.rs  tablet_tool.rs  touch.rs
src/helper/: event.rs  mod.rs
src/sys/: mod.rs  sys_1_22.rs  sys_1_23.rs  sys_1_24.rs  sys_1_25.rs  sys_1_26.rs  sys_1_27.rs  sys_1_28.rs  sys_1_29.rs  sys_1_30.rs  sys_1_31.rs
