[package]
name = "colpetto"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
description = "Async libinput wrapper"
authors = ["Federico Maria Morrone <contact@morrone.dev>"]
readme = "README.md"
repository = "https://github.com/verdiwm/colpetto"
documentation = "https://docs.rs/colpetto"
include = [
    "src/**/*.{rs,c}",
    "examples/**/*.{rs,c}",
    "build.rs",
    "README.md",
    "LICENSE",
]

[profile.release]
lto = true
codegen-units = 1
strip = true

[features]
default = ["tokio"]
tracing = ["dep:tracing"]
log = ["dep:log"]
tokio = ["dep:tokio"]

[dependencies]
devil = "0.0.7"
futures-core = "0.3.31"
thiserror = "2.0.11"
paste = "1.0.15"

# Async runtimes
tokio = { version = "1.43.0", features = ["net"], optional = true }

# Loggers
log = { version = "0.4.25", optional = true }
tracing = { version = "0.1.41", optional = true }

[build-dependencies]
cc = "1.2.9"
pkg-config = "0.3.31"

[dev-dependencies]
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
rustix = { version = "0.38.43", default-features = false, features = ["fs"] }
tokio-stream = { version = "0.1.17", default-features = false }

[package.metadata.docs.rs]
all-features = true

[lib]
doctest = false

[[example]]
name = "print_keys"
required-features = ["tokio", "tracing"]

[[example]]
name = "simple"
required-features = ["tokio"]
