[workspace]
exclude = ["gen"]

[package]
name = "colpetto"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
description = "Async libinput wrapper"
authors = ["Federico Maria Morrone <contact@morrone.dev>"]
readme = "README.md"
repository = "https://github.com/verdiwm/colpetto"
documentation = "https://docs.rs/colpetto"
include = [
    "src/**/*.{rs,c}",
    "examples/**/*.{rs,c}",
    "build.rs",
    "README.md",
    "LICENSE",
]

[profile.release]
lto = true
codegen-units = 1
strip = true

[features]
default = ["1_22"]
tracing = ["dep:tracing"]
log = ["dep:log"]
tokio = ["dep:tokio"]

# Versions
1_22 = []
1_23 = []
1_24 = []
1_25 = []
1_26 = []
1_27 = []

[dependencies]
devil = "0.0.7"
futures-core = "0.3.31"
thiserror = "2.0.11"
paste = "1.0.15"

# Async runtimes
tokio = { version = "1.43.0", features = ["net"], optional = true }

# Loggers
log = { version = "0.4.25", optional = true }
tracing = { version = "0.1.41", optional = true }

[build-dependencies]
cc = "1.2.11"
pkg-config = "0.3.31"

[dev-dependencies]
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1.43.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
] }
rustix = { version = "0.38.44", default-features = false, features = ["fs"] }
tokio-stream = { version = "0.1.17", default-features = false, features = [
    "sync",
] }
anyhow = "1.0.95"

[package.metadata.docs.rs]
no-default-features = true
features = ["tokio", "tracing", "log", "1_27"]

[lib]
doctest = false

[[example]]
name = "print_keys"
required-features = ["tokio", "tracing"]

[[example]]
name = "simple"
required-features = ["tokio"]

[[example]]
name = "task"
required-features = ["tokio"]
