[workspace]
exclude = ["gen"]

[package]
name = "colpetto"
version = "0.5.1"
edition = "2021"
license = "Apache-2.0"
description = "Async libinput wrapper"
authors = ["Matilde Morrone <contact@morrone.dev>"]
readme = "README.md"
repository = "https://github.com/verdiwm/colpetto"
documentation = "https://docs.rs/colpetto"
include = [
    "src/**/*.{rs,c}",
    "examples/**/*.{rs,c}",
    "build.rs",
    "README.md",
    "LICENSE",
]

[profile.release]
lto = true
codegen-units = 1
strip = true

[features]
default = ["1_22"]
tracing = ["dep:tracing"]
tracing-log = ["tracing", "tracing/log"]
tracing-log-always = ["tracing", "tracing/log-always"]
tokio = ["dep:tokio"]
helper = ["dep:tokio-stream", "tokio", "tokio/sync", "tokio/rt", "tokio/macros"]

# Versions
1_22 = []
1_23 = []
1_24 = []
1_25 = []
1_26 = []
1_27 = []

[dependencies]
# Core
devil = "0.0.7"
futures-core = "0.3.31"
thiserror = "2.0.12"
paste = "1.0.15"


# Optional stuff
tokio-stream = { version = "0.1.17", default-features = false, optional = true }
tokio = { version = "1.43.0", features = ["net"], optional = true }
tracing = { version = "0.1.41", optional = true }

[build-dependencies]
cc = "1.2.16"
pkg-config = "0.3.32"

[dev-dependencies]
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1.43.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
] }
rustix = { version = "1.0.0", default-features = false, features = ["fs"] }
tokio-stream = { version = "0.1.17", default-features = false, features = [
    "sync",
] }
anyhow = "1.0.97"

[package.metadata.docs.rs]
no-default-features = true
features = ["tokio", "helper", "tracing", "1_27"]

[lib]
doctest = false

[[example]]
name = "print_keys"
required-features = ["tokio", "tracing"]

[[example]]
name = "simple"
required-features = ["tokio"]

[[example]]
name = "task"
required-features = ["tokio"]
